# chronify

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  publish_to_pypi.yml
_sources/: index.md.txt
_sources/how_tos/: index.md.txt  ingest_multiple_tables.md.txt
_sources/how_tos/getting_started/: index.md.txt
_sources/reference/api/: index.md.txt  store.md.txt
_sources/tutorials/: index.md.txt
docs/: conf.py  index.md
docs/explanation/: index.md
docs/how_tos/: index.md  map_time_config.md  spark_backend.md
docs/how_tos/getting_started/: installation.md  quick_start.md
explanation/: index.html
how_tos/: index.html  ingest_multiple_tables.html  map_time_config.html  spark_backend.html
how_tos/getting_started/: index.html  installation.html  quick_start.html
reference/: index.html
reference/api/: index.html  store.html
scripts/: bulk_load.py  perf_tests.py
src/chronify/: __init__.py  annual_time_range_generator.py  base_models.py  column_representative_time_range_generator.py  common.py  csv_io.py  csv_time_series_parser.py  csv_utils.py  datetime_range_generator.py  exceptions.py  hive_functions.py  index_time_range_generator.py  loggers.py  models.py  plexos_time_series.py  representative_time_range_generator.py  schema_manager.py  store.py  time.py  time_configs.py  time_models.py  time_range_generator_base.py  time_range_generator_factory.py  time_series_checker.py  time_series_mapper.py  time_series_mapper_base.py  time_series_mapper_column_representative_to_datetime.py  time_series_mapper_datetime.py  time_series_mapper_index.py  time_series_mapper_index_time.py  time_series_mapper_representative.py  time_utils.py  time_zone_converter.py  time_zone_localizer.py
src/chronify/_vendor/kyuubi/: README.md
src/chronify/duckdb/: functions.py
src/chronify/sqlalchemy/: functions.py
src/chronify/utils/: path_utils.py  sql.py  sqlalchemy_table.py  sqlalchemy_view.py
tests/: conftest.py  mock_rep_time.py  test_auto_detect_csv.py  test_checker_representative_time.py  test_csv_parser.py  test_duckdb_functions.py  test_mapper_column_representative_to_datetime.py  test_mapper_datetime_to_datetime.py  test_mapper_index_time.py  test_mapper_index_time_to_datetime.py  test_mapper_representative_time_to_datetime.py  test_models.py  test_multi_year_time.py  test_path_utils.py  test_plexos.py  test_store.py  test_time.py  test_time_series_checker.py  test_time_series_mapper.py  test_time_utils.py  test_time_zone_converter.py  test_time_zone_localizer.py
tests/data/: gen.csv  project_time.json5  representative_time.json5
tests/util/: mapper_test_helpers.py
tutorials/: index.html
